--- a/style.css
+++ b/style.css
@@ -5,9 +5,27 @@ body .ma_page {
     position: fixed;
     top: 90vh;
     right: 5vw; }
+    @media (max-width: 575px) {
+      body .ma_page .goup {
+        right: 3vw; } }
+    @media (min-width: 576px) and (max-width: 767px) and (orientation: landscape) {
+      body .ma_page .goup {
+        right: 3vw; } }
+    @media (min-width: 768px) and (max-width: 991px) {
+      body .ma_page .goup {
+        right: 3vw; } }
     body .ma_page .goup i {
       font-size: 4rem;
       color: #ffffffb5; }
+      @media (max-width: 575px) {
+        body .ma_page .goup i {
+          font-size: 2rem; } }
+      @media (min-width: 576px) and (max-width: 767px) and (orientation: landscape) {
+        body .ma_page .goup i {
+          font-size: 3rem; } }
+      @media (min-width: 768px) and (max-width: 991px) {
+        body .ma_page .goup i {
+          font-size: 3.5rem; } }
   body .ma_page header .container-fluid {
     padding: 0;
     margin-right: auto;
@@ -38,17 +56,13 @@ body .ma_page {
         font-size: 2rem; } }
 @keyframes cam {
   0% {
-    transform: rotate(15deg);
-  }
+    transform: rotate(15deg); }
   25% {
-    transform: rotate(30deg);
-  }
+    transform: rotate(30deg); }
   50% {
-    transform: rotate(15deg);
-  }
+    transform: rotate(15deg); }
   75% {
-    transform: rotate(30deg);
-  }
+    transform: rotate(30deg); }
   100% {
     transform: rotate(15deg); } }
   body .ma_page header .title h1 {
@@ -61,6 +75,14 @@ body .ma_page {
     @media (max-width: 575px) {
       body .ma_page header .title h1 {
         font-size: 2rem; } }
+    @media (min-width: 576px) and (max-width: 767px) and (orientation: landscape) {
+      body .ma_page header .title h1 {
+        font-size: 3rem;
+        margin-top: 20vh; } }
+    @media (min-width: 768px) and (max-width: 991px) {
+      body .ma_page header .title h1 {
+        font-size: 3rem;
+        margin-top: 25vh; } }
     body .ma_page header .title h1 .access {
       color: #ffffffb5; }
   body .ma_page header .title h2 {
@@ -117,6 +139,15 @@ body .ma_page {
       body .ma_page .affichage {
         max-width: 95vw;
         margin-top: 5vh; } }
+    @media (min-width: 576px) and (max-width: 767px) and (orientation: landscape) {
+      body .ma_page .affichage {
+        max-width: 85vw; } }
+    @media (min-width: 768px) and (max-width: 991px) {
+      body .ma_page .affichage {
+        max-width: 80vw; } }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      body .ma_page .affichage {
+        max-width: 80vw; } }
     body .ma_page .affichage .bande_annonce {
       margin-top: -32px;
       margin-bottom: 30px;
