--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -16,15 +16,15 @@
                 <h2>{{film.titre}}</h2>
             </div>
             <div>
-                <p>Date de sortie : {{film.annee}}</p>
+                <p>Date de sortie : <a href="./annee">{{film.annee}}</a></p>
             </div>
             <div>
                 <p>
-                De : {{film.realisateur}}
+                De : <a href="./realisateur">{{film.realisateur}}</a>
                 </p>
             </div>
             <div>
-                <p>Avec : {{film.acteur}}</p></a>
+                <p>Avec :  <a href="./acteur">{{film.acteur}}</a></p>
             
             </div>
             <div>
