--- a/style.css
+++ b/style.css
@@ -177,11 +177,13 @@ body .ma_page {
         body .ma_page .affichage .contenu {
           height: auto; } }
       body .ma_page .affichage .contenu a {
-        text-decoration: none; }
+        text-decoration: none;
+        color: #4dcdffb8;
+        font-weight: bold; }
       body .ma_page .affichage .contenu .showBandeAnnonce {
         display: block;
         cursor: grab;
-        color: #85ddffb8;
+        color: #4dcdffb8;
         font-weight: bold; }
         body .ma_page .affichage .contenu .showBandeAnnonce:hover {
           transform: scale(1.02);
@@ -189,7 +191,7 @@ body .ma_page {
       body .ma_page .affichage .contenu .hideBandeAnnonce {
         display: none;
         cursor: grab;
-        color: #85ddffb8;
+        color: #4dcdffb8;
         font-weight: bold; }
         body .ma_page .affichage .contenu .hideBandeAnnonce:hover {
           transform: scale(1.02);
