--- a/style.scss
+++ b/style.scss
@@ -141,6 +141,7 @@ body{
                 color:#ffffffb5;
                 text-decoration: none; 
                 margin-bottom: 2em;
+                transition: .4s;
                 @media (max-width: 575px) {
                     font-size: 2rem !important;
                     margin: 2px 20px;
@@ -199,9 +200,10 @@ body{
                 }
                 .showBandeAnnonce{
                     display: block;
-                    cursor: grab;
+                    cursor: pointer;
                     color: #85ddffb8;
                     font-weight: bold;
+                    transition: .4s;
                       &:hover{
                         transform: scale(1.02); 
                         transition: .4s;
@@ -209,9 +211,10 @@ body{
                 }
                 .hideBandeAnnonce{
                     display: none;
-                    cursor: grab;
+                    cursor: pointer;
                     color: #85ddffb8;
                     font-weight: bold;
+                    transition: .4s;
                       &:hover{
                         transform: scale(1.02); 
                         transition: .4s;
