--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    {% for film in films%}
+    {% for film in films %}
    
     <div class="container-fluid d-flex flex-column"> 
         <div  class="image col-12" style="background: url({{film.image_film}}); background-size: cover;
@@ -24,8 +24,7 @@
                 </p>
             </div>
             <div>
-                <p>Avec : {{film.acteur}}</p></a>
-            
+                <p>Avec : {{film.acteur}}</p>
             </div>
             <div>
                 <p>Genre : {{film.genre}}
