--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -52,7 +52,7 @@
         <div class="goup"> </div>
                 {% block menugenre %}
                 {% endblock %}
-            <section class="container-fluid affichage d-flex flex-column align-items-center justify-content-center" >
+            <section class="container-fluid affichage d-flex flex-wrap align-items-center justify-content-center" >
                 {% block content %}
                 {%  endblock %}
                 
