restructuration de la page films, wrap pour les page acteur et realisateur

--- a/style.css
+++ b/style.css
@@ -132,9 +132,11 @@ body .ma_page {
       transform: scale(1.2);
       transition: .4s; }
   body .ma_page .affichage {
-    max-width: 65vw;
+    max-width: 80vw;
     color: #d4d4d4eb;
-    margin-bottom: 10vh; }
+    margin-bottom: 10vh;
+    display: -webkit-flex;
+    flex-wrap: wrap; }
     @media (max-width: 575px) {
       body .ma_page .affichage {
         max-width: 95vw;
@@ -172,7 +174,8 @@ body .ma_page {
       padding: 21px 45px;
       margin-bottom: 2em;
       box-shadow: 10px 2px 62px #ff202047;
-      background-color: #350000fa; }
+      background-color: #350000fa;
+      height: 500px; }
       @media (max-width: 575px) {
         body .ma_page .affichage .contenu {
           height: auto; } }
@@ -199,11 +202,13 @@ body .ma_page {
       body .ma_page .affichage .contenu h1 {
         font-size: 2rem; }
     body .ma_page .affichage .contenu_realisateur {
-      padding: 0px;
+      padding: 15px;
       margin-bottom: 2em;
       box-shadow: 10px 2px 62px #ff202047;
       background-color: #350000fa;
-      width: 50vw; }
+      width: 22vw;
+      flex: auto;
+      margin: 10px; }
       body .ma_page .affichage .contenu_realisateur:hover {
         transform: scale(1.03);
         transition: .4s; }
@@ -224,7 +229,9 @@ body .ma_page {
       margin-bottom: 2em;
       box-shadow: 10px 2px 62px #ff202047;
       background-color: #350000fa;
-      width: 30vw; }
+      width: 30vw;
+      flex: auto;
+      margin: 10px; }
       @media (max-width: 575px) {
         body .ma_page .affichage .contenu_acteur {
           width: 60vw; } }
