--- a/view/acteur.html.twig
+++ b/view/acteur.html.twig
@@ -1,7 +1,7 @@
 
  {% extends 'index.html.twig' %} 
  
- {% block content %}
+ {% block content_real_acteur  %}
 
     {% for acteur in acteurs|sort %}
     <section class="contenu_acteur">
