--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -55,7 +55,10 @@
             <section class="container-fluid affichage d-flex flex-column align-items-center justify-content-center" >
                 {% block content %}
                 {%  endblock %}
-                
+            </section>
+             <section class="container-fluid affichage" >
+                {% block content_real_acteur %}
+                {%  endblock %}
             </section>
     </section>
    
