--- a/style.scss
+++ b/style.scss
@@ -317,10 +317,12 @@ body{
               }
             
             .bande_annonce {
+                opacity: 0.0;
                 margin-top: -32px;
                 margin-bottom: 30px; 
                 display: none;
-          
+                transition: opacity 1s;
+                
                     iframe{
                     width: 100%;
                     height: 530px;
