--- a/style.scss
+++ b/style.scss
@@ -325,7 +325,7 @@ body{
               }
             
             .bande_annonce {
-                // opacity: 0.0;
+                opacity: 0.0;
                 margin-top: -32px;
                 margin-bottom: 30px;
                 display: none;
